@@ -1,1 +1,2 @@
+<gp-dev-info>Loading dev info...</gp-dev-info>
 <router-outlet></router-outlet>
