@@ -3,6 +3,5 @@
     <div class="card-body">
         <h5 class="card-title fs-1 m-0">{{title}}</h5>
         <p class="card-text fs-5">{{description}}</p>
-
     </div>
 </div>
